# pre-commit_check_load_module_py

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pre-commit_check_load_module_py.dic  pyproject.toml  setup.py
pre_commit_hook/: check_load_module.py
test/: test_check_import.py
test/repo/common/: common1.py
tests/: test_check_import.py
tests/repo/: .check_load_module
tests/repo/app/: app.py  app_util.py
tests/repo/common/: common2.py  common3.py
