[tool.poetry]
name = "pre-commit_check_load_module_py"
version = "0.0.4"
description = "A pre-commit hook that just loads python module."
authors = ["Anh-Vu Tran"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["pre_commit_hook"]
